fixed dates overlapping with name

--- a/src/styles/Invoice.css
+++ b/src/styles/Invoice.css
@@ -50,6 +50,7 @@
 
 #invoice-date {
   position: absolute;
+  width: 200px;
   margin-left: 500px;
   margin-top: 445px;
 }
